# graphwiki

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  dev.sh  pyproject.toml
graph-core/: .gitignore  Cargo.toml  README.md  pyproject.toml
graph-core/src/: events.rs  graph.rs  lib.rs  models.rs  parser.rs  query.rs  watcher.rs
graph-core/tests/: test_file_watcher.py  test_graph_engine.py  test_query.py
src/: =0.19  Dockerfile  pyproject.toml
src/data/pages/: .revisions.db  Architecture_Overview.md  Getting_Started.md  Home.md  Kubernetes_Setup.md  Markdown_Guide.md  Meeting_Notes_2026-02-10.md  MetaTable_Queries.md  Project_Roadmap.md  Python_Development.md  Rust_Graph_Engine.md  Wiki_Best_Practices.md
src/e2e/: conftest.py  test_dark_mode.py  test_editor.py  test_navigation.py  test_page_lifecycle.py  test_responsive.py
src/graphwiki/: __init__.py  config.py  main.py
src/graphwiki/core/: __init__.py  (+4 more)
src/meshwiki/: __init__.py  auth.py  config.py  main.py  utils.py
src/tests/: test_app_smoke.py  test_auth.py  test_callout_macro.py  test_config.py  test_editor.py  test_epic_status_macro.py  test_graph_focus.py  test_graph_integration.py  test_graph_node_sizing.py  test_graph_tooltips.py  test_graph_visualization.py  test_hover_card_js.py  test_include_macro.py  test_metatable_edit.py  test_observability.py  test_page_list_macro.py  test_page_tree.py  test_parser.py  test_search.py  test_slugify.py  test_storage.py  test_task_machine.py  test_task_status_macro.py  test_utils.py  test_visual_polish.py
(+170 files in other folders)
