[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "graph_core"
version = "0.1.0"
description = "Rust graph engine for MeshWiki"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
# Build a Python extension module
features = ["pyo3/extension-module"]
# Module name matches the Rust crate name
module-name = "graph_core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
